--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>📘 ProduktX – Dokumentation</h1>
-  <p>Välkommen! Detta är dokumentationen för <strong>ProduktX</strong>, ett verktyg för att samla, analysera och visualisera data i organisationer.</p>
+  <p>ProduktX är en digital plattform för att samla in, analysera och visualisera data. Den används av organisationer för att fatta datadrivna beslut effektivt.</p>
 
   <h2>🚀 Funktioner</h2>
   <ul>
@@ -25,11 +25,11 @@
   </ol>
 
   <h2>🙋 Vanliga frågor (FAQ)</h2>
-  <p><strong>Kan jag exportera mina resultat?</strong> Ja, som Excel eller PDF.</p>
-  <p><strong>Stödjer ProduktX flera användare?</strong> Ja, du kan tilldela olika roller.</p>
-  <p><strong>Är datan krypterad?</strong> Ja, all data krypteras vid överföring och lagring.</p>
+  <p><strong>Hur exporterar jag data i ProduktX?</strong><br>Du kan exportera data som Excel- eller PDF-fil direkt från rapportvyn genom att klicka på knappen “Exportera”.</p>
+  <p><strong>Stödjer ProduktX flera användare?</strong><br>Ja, du kan tilldela olika roller till olika användare i projektinställningarna.</p>
+  <p><strong>Är datan krypterad?</strong><br>Ja, all data krypteras vid överföring och lagring med industristandard.</p>
 
   <h2>📞 Support</h2>
-  <p>support@produktx.se</p>
+  <p>Kontakta oss på: <a href="mailto:support@produktx.se">support@produktx.se</a></p>
 </body>
 </html>
